# yt-content-analysis

./: .dockerignore  .env  .gitignore  docker-compose.yml  pyproject.toml
.dvc/: config
asmr_scraper/asmr_scraper/: items.py  pipelines.py  settings.py  utils.py
asmr_scraper/asmr_scraper/spiders/: asmr_crawler.py  content_crawler.py
content_analysis/: media_refresh.py
content_analysis/fake_commentator/: fake_comments.py
content_analysis/media_creation/: exceptions.py  media_creator.py  media_refresh.py  preprocessing.py
content_sourcing/: scrapy.cfg
content_sourcing/asmr_scraper/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
content_sourcing/asmr_scraper/spiders/: content_crawler.py
dashboard/: Dockerfile  db.sqlite3  manage.py
dashboard/content_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/visuals/: apps.py  views.py
dashboard/visuals/static/visuals/: main.css
dashboard/visuals/templates/visuals/: base.html  graphs.html
data/: .env  data.db.dvc  docker-compose.yml
experiment_tracking/: Dockerfile
infrastructure/: main.tf
properties/: projects.yml  video_restrictions.yml
tests/: test_asmr_analysis.py
tests/data/: .gitignore  preprocessor_input.csv.dvc  preprocessor_output.csv.dvc
tests/fake_commentator/: fake_comments_test.py
tests/media_creation/: media_creator_test.py  preprocessing_test.py
